--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
           <span class="budget__title--month"></span>:
         </div>
 
-        <div class="budget__value">+ 2,345.64</div>
+        <div class="budget__value">0</div>
 
         <div class="budget__income clearfix">
-          <div class="budget__income--text">Income</div>
+          <div class="budget__income--text">Орлого</div>
           <div class="right">
-            <div class="budget__income--value">+ 4,300.00</div>
+            <div class="budget__income--value">0</div>
             <div class="budget__income--percentage">&nbsp;</div>
           </div>
         </div>
 
         <div class="budget__expenses clearfix">
-          <div class="budget__expenses--text">Expenses</div>
+          <div class="budget__expenses--text">Зарлага</div>
           <div class="right clearfix">
-            <div class="budget__expenses--value">- 1,954.36</div>
-            <div class="budget__expenses--percentage">45%</div>
+            <div class="budget__expenses--value">0</div>
+            <div class="budget__expenses--percentage">0</div>
           </div>
         </div>
       </div>
@@ -49,12 +49,8 @@
             <option value="inc" selected>+</option>
             <option value="exp">-</option>
           </select>
-          <input
-            type="text"
-            class="add__description"
-            placeholder="Add description"
-          />
-          <input type="number" class="add__value" placeholder="Value" />
+          <input type="text" class="add__description" placeholder="Тайлбар" />
+          <input type="number" class="add__value" placeholder="Дүн" />
           <button class="add__btn">
             <i class="ion-ios-checkmark-outline"></i>
           </button>
@@ -63,12 +59,12 @@
 
       <div class="container clearfix">
         <div class="income">
-          <h2 class="icome__title">Income</h2>
+          <h2 class="icome__title">Орлого</h2>
           <div class="income__list"></div>
         </div>
 
         <div class="expenses">
-          <h2 class="expenses__title">Expenses</h2>
+          <h2 class="expenses__title">Зарлага</h2>
 
           <div class="expenses__list"></div>
         </div>
